feat: all event source is resource event source
Signed-off-by: Attila Mészáros <csviri@gmail.com>